Limpieza y desarrollo de un nuevo navbar

--- a/src/app/Components/aliados/aliados.component.html
+++ b/src/app/Components/aliados/aliados.component.html
@@ -1,44 +1,27 @@
+<app-nav></app-nav>
+<div class="container">
+    <div class="row justify-content-md-center" >
+        
+      <div class="card1">
+          <div class="card-body">
+            <img src="../../../assets/img/marco.svg" class="cuadro1"  alt="">
+            <img src="../../../assets/img/asoc1.svg" class="img1"  alt="">        
+          </div>
+        </div>
+        
+        <div class="card1">
+          <div class="card-body">
+              <img src="../../../assets/img/open.svg" class="cuadro2"  alt="">
+              <img src="../../../assets/img/asoc2.svg" class="img2" alt="">                   
+          </div>
+        </div>
+        
+        <div  class="card1 " >
+          <div class="card-body ">
+              <img src="../../../assets/img/marco.svg" class="cuadro3"  alt="">
+              <img src="../../../assets/img/asoc3.svg" class="img1" alt="">        
+          </div>
+        </div>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body class="color1"> 
-  <!-- <picture>
-    <img class="fondo" src="../../assets/img/Home/home.png" />
-  </picture> -->
-    <app-nav></app-nav>
-    <app-navbar class="navres"></app-navbar>
-    <div class="container">
-        <div class="row hola " >
-            <div class="card1">
-              <div class="card-body">
-                <img src="../../../assets/img/marco.svg" class="cuadro1"  alt="">
-                <img src="../../../assets/img/asoc1.svg" class="img1"  alt="">
-                  
-                </div>
-              </div>
-              <div class="card1">
-                <div class="card-body">
-                    <img src="../../../assets/img/open.svg" class="cuadro2"  alt="">
-                    <img src="../../../assets/img/asoc2.svg" class="img2" alt="">                   
-                </div>
-              </div>
-              <div  class="card1 " >
-                <div class="card-body ">
-                    <img src="../../../assets/img/marco.svg" class="cuadro3"  alt="">
-                    <img src="../../../assets/img/asoc3.svg" class="img1" alt="">
-                    
-                </div>
-              </div>
-            </div>
-          
-    </div>
-    <br><br><br><br>
-</body>
-</html>
-  
-<!-- </div> -->
+    </div> 
+</div>
