--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -1,26 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-  <body class="color1">
-    <div class="hola1">
-      <p class="text1">{{"NAV.TITLE" | translate}}</p>
-      <img class="nav__barra" src="../../assets/img/Inicio/bara.svg" alt="">
-      <img class="nav__item-1" routerLink="/nosotros" src="../../assets/img/img/nosotros.png" alt="" srcset="">
-      <p><a class="nav__nosotros text" routerLink="/nosotros" >{{"NAV.TITLE-1" | translate}}</a></p>
-      <img class="nav__item-2" src="../../assets/img/img/nuestra-experiencia.png" alt="" srcset="">
-      <p><a class="nav__experiencia text" routerLink="/experiencia" >{{"NAV.TITLE-2" | translate}}</a></p>
-      <img class="nav__item-3" src="../../assets/img/img/aliados.png"  alt="" srcset="">
-      <p><a class="nav__aliados text" routerLink="/aliados" >{{"NAV.TITLE-3" | translate}}</a></p>
-      <img class="nav__item-4" src="../../assets/img/img/oficina-virtual.png" alt="" srcset="">
-      <p><a class="nav__virtual text" href="https://gather.town/app/zmougmiMJ2HHVYbZ/ketanolab" >{{"NAV.TITLE-4" | translate}}</a></p>
-      <img class="nav__logo" routerLink="/" src="../../assets/img/img/circulo-01.svg">
-      <p><a class="nav__home text" routerLink="/" >{{"NAV.TITLE-5" | translate}}</a></p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-ketanolab">
+  <div class="container">
+      <a class="navbar-brand d-lg-none" href="#">
+          <img src="../../assets/img/img/circulo-01.svg" alt="Ketanolab">
+      </a>  
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav"><!--mx-auto-->
+          <a class="navbar-brand d-none d-lg-block" href="#">
+              <img src="../../assets/img/img/circulo-01.svg" alt="Ketanolab">
+          </a>        
+          <a class="nav-link" href="/nosotros"><span class="nav-link-1">{{"NAV.TITLE-1" | translate}}</span></a>
+          <a class="nav-link" href="/experiencia"><span class="nav-link-2">{{"NAV.TITLE-2" | translate}}</span></a>
+          <a class="nav-link" href="/aliados"><span class="nav-link-3">{{"NAV.TITLE-3" | translate}}</span></a>
+          <a class="nav-link" href="#"><span class="nav-link-4">{{"NAV.TITLE-4" | translate}}</span></a>
+      </div>
+    </div>
   </div>
-</body>
-</html>
-
+</nav>
