--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,26 @@
 @import 'tailwindcss/utilities';
 
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500&family=Oxygen&family=Poppins:wght@700&display=swap');
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     
+}
+
+.h1, h1 {
+    font-size: 3rem;
+    font-family: 'Orbitron';
+}
+
+body {
+    background-color: #00172a;
+    color: #fff;
+    font-family: 'Jost', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    cursor:url(/assets/img/cursor.png), auto;
+
 }
