--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,4 +1,7 @@
 <app-nav></app-nav>
+<div class="container-fluid inicio-container">
+    
+</div>
         <picture>
             <img class="img-1" src="../../assets/img/principal/2.png" alt="">
             <p><a href=""class="text-1 text">{{"BEGINNING.TITLE-1" | translate}}</a></p>
