--- a/src/app/Components/inicio/inicio.component.css
+++ b/src/app/Components/inicio/inicio.component.css
@@ -1,79 +1,113 @@
-.img-1 {
-    position: absolute;
-    width: 350px;
-    top: 27%;
-    left: 65%;
-    box-shadow: 13px 13px 13px 1px rgba(0, 0, 0);
-    z-index: 1;
-    border: 1px solid #004483ff;
-
-
-
-    background-image: linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff);
-    background-repeat: no-repeat;
-    background-size: 10px 37%, 15% 10px, 10px 38%, 15% 10px, calc(100% - 1px) calc(100% - 1px);
-    background-position: left bottom, left bottom, right top, right top, 1px 1px;
-    padding: 2px;
-
-
-
+.inicio-container {
+    height: 80vh;
 }
-.text-1 {
+
+.fila-1, .fila-2{
+    height: 50%;
+}
+
+.div-estrategia {
+    position: relative;
+    left: 200px;
+    top: 80px;
+}
+
+    .estrategia-block-1 {
+        position: relative;
+        bottom: 250px;
+        left: 280px;
+    }
+
+.div-blockchain {
+    position: relative;
+    left: 200px;
+    top: 150px;
+}
+
+.div-digitales {
+    position: relative;
+    left: 0px;
+    top: 50px;
+}
+
+.div-metaverso {
+    position: relative;
+    left: 450px;
+    top: 100px;
+}
+
+.div-hunting {
+    position: relative;
+    left: 150px;
+    top: 150px;
+    width: 360px;
+}
+
+@media (max-width: 500px){
+    .div-estrategia {
+        position: relative;
+        left: 0px;
+        top: 0px;
+    }
+
+    .div-blockchain {
+        position: relative;
+        left: 0px;
+        top: 0px;
+    }
+
+    .div-digitales {
+        position: relative;
+        left: 0px;
+        top: 0px;
+    }
+
+    .div-metaverso {
+        position: relative;
+        left: 0px;
+        top: 0px;
+    }
+
+    .div-hunting {
+        position: relative;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+    }
+
+    .fila-1, .fila-2{
+        height: 100%;
+    }
+}
+
+.img-container {
+    position: relative;
+    text-align: center;
     color: white;
+    width: 350px;
+}
+
+.centered {
     position: absolute;
-    top: 44%;
-    left: 68%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.servicios-box {
     z-index: 2;
+    text-align: center;
+    background-color: #001e36;
+    padding: 1rem 2rem;
+    border: #002443ff 10px double;
+    outline-width: 1px;
+    position: relative;
+    max-width: 150px;
+    display: block;
     font-size: 15px;
 }
 
-.text-1-2 {
-    color: white;
-    position: absolute;
-    top: 43%;
-    left: 82%;
-    background-color: #001e36;
-    padding: 80px 15px 25px 10px;
-    border: #002443ff 10px double;
-    outline-width: 1px;
-}
-
-.text-1-3 {
-    color: white;
-    position: absolute;
-    text-align: center;
-    top: 18%;
-    left: 80.5%;
-    background-color: #001e36;
-    padding: 20px 30px 70px 30px;
-    border: #002443ff 10px double;
-    outline-width: 1px;
-
-}
-
-.text-1-4 {
-    color: white;
-    position: absolute;
-    text-align: center;
-    top: 22%;
-    left: 60%;
-    background-color: #001e36;
-    padding: 50px 55px 50px 30px;
-    border: #002443ff 10px double;
-    outline-width: 1px;
-}
-
-
-
-.img-2 {
-    position: absolute;
-    width: 350px;
-    height: 200px;
-    top: 66%;
-    left: 20%;
+.img-inicio {
     box-shadow: 13px 13px 13px 1px rgba(0, 0, 0);
     z-index: 1;
     border: 1px solid #004483ff;
@@ -85,211 +119,8 @@
     background-size: 10px 37%, 15% 10px, 10px 38%, 15% 10px, calc(100% - 1px) calc(100% - 1px);
     background-position: left bottom, left bottom, right top, right top, 1px 1px;
     padding: 2px;
-
-
 }
 
-.text-2 {
-    color: white;
-    position: absolute;
-    top: 83%;
-    left: 25%;
-    z-index: 2;
-    font-size: 13px;
-}
-
-.text-2-1 {
-    color: white;
-    position: absolute;
-    top: 82%;
-    left: 13%;
-    background-color: #001e36;
-    padding: 50px 20px 20px 20px;
-    border: #002443ff 10px double;
-    outline-width: 1px;
-}
-
-.text-2-2 {
-    color: white;
-    position: absolute;
-    text-align: center;
-    top: 82%;
-    left: 37%;
-    background-color: #001e36;
-    padding: 40px 30px 15px 30px;
-    border: #002443ff 10px double;
-    outline-width: 1px;
-}
-
-.text-2-3 {
-    color: white;
-    position: absolute;
-    text-align: center;
-    top: 55%;
-    left: 35%;
-    background-color: #001e36;
-    padding: 10px 30px 60px 30px;
-    border: #002443ff 10px double;
-    outline-width: 1px;
-}
-
-.img-3 {
-    position: absolute;
-    width: 350px;
-    top: 33%;
-    left: 10%;
-    box-shadow: 13px 13px 13px 1px rgba(0, 0, 0);
-    z-index: 1;
-
-    border: 1px solid #004483ff;
-
-
-
-    background-image: linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff);
-    background-repeat: no-repeat;
-    background-size: 10px 37%, 15% 10px, 10px 38%, 15% 10px, calc(100% - 1px) calc(100% - 1px);
-    background-position: left bottom, left bottom, right top, right top, 1px 1px;
-    padding: 2px;
-}
-
-.text-3{
-    color: white;
-    position: absolute;
-    top: 43%;
-    left: 11%;
-    font-size: 0.9rem;
-    z-index: 2;
-    font-size: 13px;
-
-}
-
-.text-3-1 {
-    color: white;
-    position: absolute;
-    text-align: center;
-    top: 24%;
-    left: 22%;
-    background-color: #001e36;
-    padding: 20px 20px 70px 25px;
-    border: #002443ff 10px double;
-    outline-width: 1px;
-
-
-}
-
-.text-3-2 {
-    color: white;
-    position: absolute;
-    text-align: center;
-    top: 51%;
-    left: 8.5%;
-    background-color: #001e36;
-    padding: 40px 25px 50px 25px;
-    border: #002443ff 10px double;
-    outline-width: 1px;
-}
-
-.img-4 {
-    position: absolute;
-    width: 350px;
-    top: 40%;
-    left: 46%;
-
-    box-shadow: 13px 13px 13px 1px rgba(0, 0, 0);
-    z-index: 1;
-
-    border: 1px solid #004483ff;
-
-
-
-    background-image: linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff);
-    background-repeat: no-repeat;
-    background-size: 10px 37%, 15% 10px, 10px 38%, 15% 10px, calc(100% - 1px) calc(100% - 1px);
-    background-position: left bottom, left bottom, right top, right top, 1px 1px;
-    padding: 2px;
-
-}
-
-
-.text-4 {
-    color: white;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    z-index: 2;
-    font-size: 13px;
-}
-
-.text-4-2 {
-    color: white;
-    position: absolute;
-    top: 33%;
-    left: 41%;
-    background-color: #001e36;
-    padding: 50px 55px 50px 30px;
-    border: #002443ff 10px double;
-    outline-width: 1px;
-
-}
-
-.text-4-1{
-    color: white;
-    position: absolute;
-    top: 108%;
-    left: 25%;
-    text-align: center;
-}
-
-.img-5 {
-    position: absolute;
-    width: 300px;
-    top: 76%;
-    left:66%;
-    box-shadow: 13px 13px 13px 1px rgba(0, 0, 0);
-    z-index: 1;
-
-    border: 1px solid #004483ff;
-
-
-
-    background-image: linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff),
-                    linear-gradient(#007df1ff, #007df1ff);
-    background-repeat: no-repeat;
-    background-size: 10px 37%, 15% 10px, 10px 38%, 15% 10px, calc(100% - 1px) calc(100% - 1px);
-    background-position: left bottom, left bottom, right top, right top, 1px 1px;
-    padding: 2px;
-}
-
-
-
-.text-5-1 {
-    color: white;
-    position: absolute;
-    top: 80%;
-    left: 68%;
-    text-align: center;
-    font-size: 0.77rem;
-    z-index: 2;
-}
-.text-5-2 {
-    color: white;
-    position: absolute;
-    text-align: center;
-    top: 67%;
-    left: 80%;
-    background-color: #001e36;
-    padding: 60px 25px 50px 25px;
-    border: #002443ff 10px double;
-    outline-width: 1px;
-}
 
 .fuente {
 font-family: alibaba-sans, sans-serif;
