--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,45 +1,66 @@
 <app-nav></app-nav>
 <div class="container-fluid inicio-container">
     
+    <div class="row fila-1">
+        <div class="col-md-4 bg-success p-5">
+            <div class="div-estrategia">
+                <div class="img-container">
+                    <img class="img-inicio" src="../../assets/img/principal/3.png" alt="">
+                    <a class="centered">{{"BEGINNING.TITLE-7" | translate}}</a>
+                </div>
+                <div class="estrategia-block-1"><a href="/produccion"class="servicios-box">{{"BEGINNING.TITLE-8" | translate}}</a></div>
+                <a href="/marketing"class="servicios-box">{{"BEGINNING.TITLE-9" | translate}}</a>
+            </div>
+        </div>
+
+        <div class="col-md-4 bg-warning p-5">
+            <div class="div-blockchain">
+                <div class="img-container">
+                    <img class="img-inicio" src="../../assets/img/principal/4.png" alt="">
+                    <span class="centered">{{"BEGINNING.TITLE-10" | translate}}</span>
+                </div>
+                <a class="servicios-box" href="/dapps">{{"BEGINNING.TITLE-11" | translate}}</a>
+            </div>
+        </div>
+
+        <div class="col-md-4 bg-primary p-5">
+            <div class="div-digitales">
+                <div class="img-container">
+                    <img class="img-inicio" src="../../assets/img/principal/2.png" alt="">
+                    <span class="centered">{{"BEGINNING.TITLE-1" | translate}}</span>
+                </div>
+                <a href="/commerce" class="servicios-box">{{"BEGINNING.TITLE-2" | translate}}</a>
+                <a href="/apps"class="servicios-box">{{"BEGINNING.TITLE-4" | translate}}</a>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="row fila-2">
+
+        <div class="col-md-6 bg-secondary">
+            <div class="div-metaverso">
+                <div class="img-container">
+                    <img class="img-inicio" src="../../assets/img/principal/1.png" alt="">
+                    <span class="centered">{{"BEGINNING.TITLE-5" | translate}}</span>
+                </div>
+                
+                <a class="servicios-box" href="/arte">{{"BEGINNING.TITLE-6" | translate}}</a>
+                <a class="servicios-box" href="/turismo">{{"BEGINNING.COACHING-1" | translate}}</a>
+                <a href="/coaching"class="servicios-box">{{"BEGINNING.COACHING-2" | translate}}</a>
+            </div>
+        </div>
+
+
+        <div class="col-md-6 bg-info">
+            <div class="div-hunting">
+                <div class="img-container">
+                    <img class="img-inicio" src="../../assets/img/principal/5.png" alt="">
+                    <span class="centered">{{"BEGINNING.TITLE-12" | translate}}</span>
+                </div>
+                
+                <a href="/services" class="servicios-box">{{"BEGINNING.TITLE-3" | translate}}</a>
+            </div>
+        </div>
+    </div>
 </div>
-        <picture>
-            <img class="img-1" src="../../assets/img/principal/2.png" alt="">
-            <p><a href=""class="text-1 text">{{"BEGINNING.TITLE-1" | translate}}</a></p>
-            <p><a href="/commerce" class="text-1-2 fuente"  >{{"BEGINNING.TITLE-2" | translate}}</a></p>
-            <p><a href="/services"class="text-1-3 fuente">{{"BEGINNING.TITLE-3" | translate}} <p class="fuente">{{"BEGINNING.TITLE-3.1" | translate}}</p></a></p>
-            <p><a href="/apps"class="text-1-4 fuente">{{"BEGINNING.TITLE-4" | translate}}</a></p>
-        </picture>
-
-    <picture>
-        <img class="img-2" src="../../assets/img/principal/1.png" alt="">
-        <p><a href=""class="text-2 text">{{"BEGINNING.TITLE-5" | translate}}</a></p>
-        <p><a class="text-2-1 fuente" href="/arte">{{"BEGINNING.TITLE-6" | translate}}
-            </a></p>
-        <p><a class="text-2-2 fuente" href="/turismo">{{"BEGINNING.COACHING-1.1" | translate}}
-            <p class="fuente"> {{"BEGINNING.COACHING-1.2" | translate}}</p></a></p>
-        <p><a href="/coaching"class="text-2-3 fuente">{{"BEGINNING.COACHING" | translate}}
-            <p class="fuente"> {{"BEGINNING.COACHING-2.1" | translate}}</p>
-            <p class="fuente"> {{"BEGINNING.COACHING-2.2" | translate}}</p></a></p>
-    </picture>
-
-    <picture>
-        <img class="img-3" src="../../assets/img/principal/3.png" alt="">
-        <p><a href="#" class="text-3 text">{{"BEGINNING.TITLE-7" | translate}}</a></p>
-        <p><a href="/produccion"class="text-3-1 fuente">{{"BEGINNING.TITLE-8" | translate}}
-            <p class="fuente"> {{"BEGINNING.TITLE-8.1" | translate}}</p></a></p>
-        <p><a href="/marketing"class="text-3-2 fuente">{{"BEGINNING.TITLE-9" | translate}}
-            <p class="fuente"> {{"BEGINNING.TITLE-9.1" | translate}}</p></a></p>
-    </picture>
-
-    <picture>
-        <img class="img-4" src="../../assets/img/principal/4.png" alt="">
-        <p><a href=""class="text-4 text"> {{"BEGINNING.TITLE-10" | translate}} <p class="text-4-1 text">  {{"BEGINNING.TITLE-10.1" | translate}}</p></a></p>
-        <p><a class="text-4-2 fuente" href="/dapps">{{"BEGINNING.TITLE-11" | translate}}</a></p>
-    </picture>
-
-    <picture>
-        <img class="img-5" src="../../assets/img/principal/5.png" alt="">
-        <p><a href=""class="text-5-1 text">{{"BEGINNING.TITLE-12" | translate}}
-            <p class="text">{{"BEGINNING.TITLE-12.1" | translate}}</p></a></p>
-            <p><a href="/services"class="text-5-2 fuente">{{"BEGINNING.TITLE-3" | translate}}</a></p>
-    </picture>
