--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -1,28 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body class="color1">
-    <app-nav></app-nav>
-    <app-navbar class="navres"></app-navbar>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-auto posicion">
-                <div class="figura">
-                    <p class="pt-6 ml-1 fuente">{{"SERVICES.TITLE" | translate}}</p>
-                </div>
-              <img src="../../../assets/img/mark.jpg" class="img1" alt="">
+<app-nav></app-nav>
+<div class="container, align-top">
+    <div class="row justify-content-center">
+        <div class="col-auto posicion">
+            <div class="figura">
+                <p class="pt-6 ml-1 fuente">{{"SERVICES.TITLE" | translate}}</p>
             </div>
-            <div class="col col-md-3 ml-2 color">
-                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
-                <p class=" pb-6 pt-6 h6">{{"SERVICES.PARAGRAPH" | translate}}</p>
-            </div>
-          </div>
-    </div>
-    <br><br><br><br><br><br><br>
-</body>
-</html>
-
+            <img src="../../../assets/img/mark.jpg" class="img1" alt="">
+        </div>
+        <div class="col col-md-3 ml-2 color">
+            <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
+            <p class=" pb-6 pt-6 h6">{{"SERVICES.PARAGRAPH" | translate}}</p>
+        </div>
+        </div>
+</div>
