@AlexQuijote. Segundo Commit. Pequeños Cambios en Angular.
Los siguientes archivos han sido modificados:

    1) ARTE. -Typescript y Html-.

Cambios realizados:

    1) Creé la variable "estado" en Typescript, de tipo booleano, y le
asigné el valor true por defecto en el constructor. Luego la declaré, y
la llevé al Html de Arte. Empleé el disparador (mouseover) y (mouseout),
para que lea los eventos del mouse, y le asigné el valor "true" a
(mouseover), y el valor "false" a (mouseout). Posteriormente, con la
estructura de control condicional "*ngIf"  ordené que desaparezcan los
elementos de la página, y aparezcan otros nuevos, y con ello, lograr
la apariencia deseada. Fin del 2 Commit.

--- a/src/app/Components/apps/apps.component.html
+++ b/src/app/Components/apps/apps.component.html
@@ -7,7 +7,7 @@
             </div>
             <img src="../../../assets/img/app.png" class="img1" alt="">
         </div>
-        <div class="col col-md-3 ml-2 color">
+        <div class="col col-md-3 ml-2 color p-7">
             <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
             <p class="pt-4 h6">{{"APPS.PARAGRAPH" | translate}}</p>
         </div>
