--- a/src/app/Components/coaching/coaching.component.html
+++ b/src/app/Components/coaching/coaching.component.html
@@ -7,7 +7,7 @@
             </div>
             <img src="../../../assets/img/proyecDigi.svg" class="img1" alt="">
         </div>
-        <div class="col col-md-3 ml-2 color">
+        <div class="col col-md-3 ml-2 color p-7">
             <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
             <p class=" pb-6 pt-6 h6">{{"DIGITAL-PROJECTS.PARAGRAPH" | translate}}</p>
         </div>
