--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -7,7 +7,7 @@
             </div>
             <img src="../../../assets/img/markExp.svg" class="img1" alt="">
         </div>
-        <div class="col col-md-3 ml-2 color">
+        <div class="col col-md-3 ml-2 color p-7">
             <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
             <p class="  pt-4 h6">{{"MARKETING.PARAGRAPH" | translate}}</p>
             <p class=" pb-4 pt-6 h6">{{"MARKETING.PARAGRAPH-1" | translate}}</p>
